--- a/1. Image Collection.ipynb
+++ b/1. Image Collection.ipynb
@@ -16,8 +16,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: opencv-python in d:\\youtube\\od\\tfodcourse\\tfod\\lib\\site-packages (4.5.1.48)\n",
-      "Requirement already satisfied: numpy>=1.14.5 in d:\\youtube\\od\\tfodcourse\\tfod\\lib\\site-packages (from opencv-python) (1.20.2)\n"
+      "Requirement already satisfied: opencv-python in c:\\users\\user\\miniconda3\\envs\\tfod\\lib\\site-packages (4.5.5.62)\n",
+      "Requirement already satisfied: numpy>=1.14.5 in c:\\users\\user\\appdata\\roaming\\python\\python37\\site-packages (from opencv-python) (1.21.4)\n"
      ]
     }
    ],
@@ -53,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ['thumbsup', 'thumbsdown', 'thankyou', 'livelong']\n",
+    "labels = ['thumbsup', 'thumbsdown', 'peace', 'glasses']\n",
     "number_imgs = 5"
    ]
   },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -111,6 +111,24 @@
      "output_type": "stream",
      "text": [
       "Collecting images for thumbsup\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting images for thumbsdown\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting images for peace\n",
+      "Collecting image 0\n",
+      "Collecting image 1\n",
+      "Collecting image 2\n",
+      "Collecting image 3\n",
+      "Collecting image 4\n",
+      "Collecting images for glasses\n",
       "Collecting image 0\n",
       "Collecting image 1\n",
       "Collecting image 2\n",
@@ -130,7 +148,7 @@
     "        imgname = os.path.join(IMAGES_PATH,label,label+'.'+'{}.jpg'.format(str(uuid.uuid1())))\n",
     "        cv2.imwrite(imgname, frame)\n",
     "        cv2.imshow('frame', frame)\n",
-    "        time.sleep(2)\n",
+    "        time.sleep(3)\n",
     "\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "            break\n",
@@ -147,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,15 +173,17 @@
      "output_type": "stream",
      "text": [
       "Collecting pyqt5\n",
-      "  Using cached PyQt5-5.15.4-cp36.cp37.cp38.cp39-none-win_amd64.whl (6.8 MB)\n",
+      "  Using cached PyQt5-5.15.6-cp36-abi3-win_amd64.whl (6.7 MB)\n",
       "Collecting lxml\n",
-      "  Using cached lxml-4.6.3-cp37-cp37m-win_amd64.whl (3.5 MB)\n",
-      "Collecting PyQt5-sip<13,>=12.8\n",
-      "  Using cached PyQt5_sip-12.8.1-cp37-cp37m-win_amd64.whl (62 kB)\n",
-      "Collecting PyQt5-Qt5>=5.15\n",
+      "  Downloading lxml-4.7.1-cp37-cp37m-win_amd64.whl (3.7 MB)\n",
+      "     ---------------------------------------- 3.7/3.7 MB 2.2 MB/s eta 0:00:00\n",
+      "Collecting PyQt5-Qt5>=5.15.2\n",
       "  Using cached PyQt5_Qt5-5.15.2-py3-none-win_amd64.whl (50.1 MB)\n",
-      "Installing collected packages: PyQt5-sip, PyQt5-Qt5, pyqt5, lxml\n",
-      "Successfully installed PyQt5-Qt5-5.15.2 PyQt5-sip-12.8.1 lxml-4.6.3 pyqt5-5.15.4\n"
+      "Collecting PyQt5-sip<13,>=12.8\n",
+      "  Downloading PyQt5_sip-12.9.1-cp37-cp37m-win_amd64.whl (76 kB)\n",
+      "     ---------------------------------------- 76.9/76.9 KB 2.1 MB/s eta 0:00:00\n",
+      "Installing collected packages: PyQt5-Qt5, PyQt5-sip, lxml, pyqt5\n",
+      "Successfully installed PyQt5-Qt5-5.15.2 PyQt5-sip-12.9.1 lxml-4.7.1 pyqt5-5.15.6\n"
      ]
     }
    ],
@@ -173,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,18 +233,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image:D:\\YouTube\\OD\\TFODCourse\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.6a706a36-940f-11eb-b4eb-5cf3709bbcc6.jpg -> Annotation:D:/YouTube/OD/TFODCourse/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.6a706a36-940f-11eb-b4eb-5cf3709bbcc6.xml\n",
-      "Image:D:\\YouTube\\OD\\TFODCourse\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.6ba4d864-940f-11eb-8c74-5cf3709bbcc6.jpg -> Annotation:D:/YouTube/OD/TFODCourse/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.6ba4d864-940f-11eb-8c74-5cf3709bbcc6.xml\n",
-      "Image:D:\\YouTube\\OD\\TFODCourse\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.6cd9c8e2-940f-11eb-b901-5cf3709bbcc6.jpg -> Annotation:D:/YouTube/OD/TFODCourse/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.6cd9c8e2-940f-11eb-b901-5cf3709bbcc6.xml\n",
-      "Image:D:\\YouTube\\OD\\TFODCourse\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.6e0f5bc0-940f-11eb-8d18-5cf3709bbcc6.jpg -> Annotation:D:/YouTube/OD/TFODCourse/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.6e0f5bc0-940f-11eb-8d18-5cf3709bbcc6.xml\n",
-      "Image:D:\\YouTube\\OD\\TFODCourse\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.693a5158-940f-11eb-8752-5cf3709bbcc6.jpg -> Annotation:D:/YouTube/OD/TFODCourse/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.693a5158-940f-11eb-8752-5cf3709bbcc6.xml\n"
+      "Cancel creation.\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.21b39ac0-85a2-11ec-b1b4-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.21b39ac0-85a2-11ec-b1b4-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.33b66e46-85a2-11ec-abfe-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.33b66e46-85a2-11ec-abfe-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.254e50b1-85a2-11ec-b33e-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.254e50b1-85a2-11ec-b33e-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsup\\thumbsup.23811029-85a2-11ec-83e1-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsup/thumbsup.23811029-85a2-11ec-83e1-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.2c8124e8-85a2-11ec-978d-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsdown/thumbsdown.2c8124e8-85a2-11ec-978d-a46bb617d477.xml\n",
+      "Cancel creation.\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\thumbsdown\\thumbsdown.301cf79b-85a2-11ec-8ef0-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/thumbsdown/thumbsdown.301cf79b-85a2-11ec-8ef0-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\peace\\peace.3e7d8ca9-85a2-11ec-a908-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/peace/peace.3e7d8ca9-85a2-11ec-a908-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\peace\\peace.404909ba-85a2-11ec-bfe6-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/peace/peace.404909ba-85a2-11ec-bfe6-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.1e105d04-85a2-11ec-9e44-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.1e105d04-85a2-11ec-9e44-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.1fe74f2f-85a2-11ec-b95f-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.1fe74f2f-85a2-11ec-b95f-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.4b08b0eb-85a2-11ec-aed9-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.4b08b0eb-85a2-11ec-aed9-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.4cd66ab8-85a2-11ec-a1aa-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.4cd66ab8-85a2-11ec-a1aa-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.49397f1f-85a2-11ec-a775-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.49397f1f-85a2-11ec-a775-a46bb617d477.xml\n",
+      "Image:C:\\DS_projects\\TFOD\\Tensorflow\\workspace\\images\\collectedimages\\glasses\\glasses.50703ae3-85a2-11ec-94e6-a46bb617d477.jpg -> Annotation:C:/DS_projects/TFOD/Tensorflow/workspace/images/collectedimages/glasses/glasses.50703ae3-85a2-11ec-94e6-a46bb617d477.xml\n"
      ]
     }
    ],
@@ -248,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,9 +290,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "if not os.path.exists(TRAIN_PATH):\n",
+    "    if os.name == 'posix':\n",
+    "        !mkdir -p {TRAIN_PATH}\n",
+    "    if os.name == 'nt':\n",
+    "         !mkdir {TRAIN_PATH}\n",
+    "if not os.path.exists(TEST_PATH):\n",
+    "    if os.name == 'posix':\n",
+    "        !mkdir -p {TEST_PATH}\n",
+    "    if os.name == 'nt':\n",
+    "        !mkdir {TEST_PATH}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tar: Tensorflow\\\\workspace\\\\images\\train: Cannot stat: No such file or directory\n",
+      "tar: Tensorflow\\\\workspace\\\\images\\test: Cannot stat: No such file or directory\n",
+      "tar: Exiting with failure status due to previous errors\n"
+     ]
+    }
+   ],
    "source": [
     "!tar -czf {ARCHIVE_PATH} {TRAIN_PATH} {TEST_PATH}"
    ]
@@ -276,9 +335,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tfod",
+   "display_name": "tf",
    "language": "python",
-   "name": "tfod"
+   "name": "tf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -290,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
