--- a/1. Image Collection.ipynb
+++ b/1. Image Collection.ipynb
@@ -139,12 +139,12 @@
    ],
    "source": [
     "for label in labels:\n",
-    "    cap = cv2.VideoCapture(0)\n",
+    "    cap = cv2.VideoCapture(0) # 0 for identifying the position of web camera\n",
     "    print('Collecting images for {}'.format(label))\n",
     "    time.sleep(5)\n",
     "    for imgnum in range(number_imgs):\n",
     "        print('Collecting image {}'.format(imgnum))\n",
-    "        ret, frame = cap.read()\n",
+    "        ret, frame = cap.read() # ret for indication of recieving frames\n",
     "        imgname = os.path.join(IMAGES_PATH,label,label+'.'+'{}.jpg'.format(str(uuid.uuid1())))\n",
     "        cv2.imwrite(imgname, frame)\n",
     "        cv2.imshow('frame', frame)\n",
