--- a/Training_and_Detection_colab.ipynb
+++ b/Training_and_Detection_colab.ipynb
@@ -1345,7 +1345,7 @@
     "pipeline_config = pipeline_pb2.TrainEvalPipelineConfig()\n",
     "with tf.io.gfile.GFile(files['PIPELINE_CONFIG'], \"r\") as f:                                                                                                                                                                                                                     \n",
     "    proto_str = f.read()                                                                                                                                                                                                                                          \n",
-    "    text_format.Merge(proto_str, pipeline_config)  "
+    "    text_format.Merge(proto_str, pipeline_config)  # Convert string to message"
    ]
   },
   {
@@ -1374,7 +1374,7 @@
    },
    "outputs": [],
    "source": [
-    "config_text = text_format.MessageToString(pipeline_config)                                                                                                                                                                                                        \n",
+    "config_text = text_format.MessageToString(pipeline_config)    # Covnert message to string                                                                                                                                                                                                    \n",
     "with tf.io.gfile.GFile(files['PIPELINE_CONFIG'], \"wb\") as f:                                                                                                                                                                                                                     \n",
     "    f.write(config_text)   "
    ]
@@ -2211,12 +2211,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "76JyfQYhiIz8"
    },
-   "outputs": [],
    "source": [
     "!pip uninstall opencv-python-headless -y"
    ]
@@ -2845,9 +2843,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tf",
    "language": "python",
-   "name": "python3"
+   "name": "tf"
   },
   "language_info": {
    "codemirror_mode": {
